fix overflow

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,3 +1,7 @@
+.App {
+  overflow-x: hidden;
+}
+
 footer, header {
   background-color: #3f7cad;
 }
